# devops-mcps

./: .dockerignore  .env.local  .gitignore  Dockerfile  Makefile  README.md  STRATEGIC_ROADMAP.md  build.bat  build.sh  debug_cache.py  debug_jenkins.py  debug_test.py  debug_test_assignment.py  example_prompts.json  fix_all_jenkins_tests.py  fix_function_signatures.py  fix_jenkins_tests.py  fix_jenkins_tests_targeted.py  fix_remaining_jenkins_tests.py  pyproject.toml  server.py  test.sh  test_fix.py
.github/workflows/: release.yml
.trae/rules/: project_rules.md
devops_mcps/: core.py  github.py  jenkins.py
devops_mcps/utils/: __init__.py  github_api.py
devops_mcps/utils/jenkins/: __init__.py  jenkins_api.py  jenkins_client.py
src/devops-mcp/: __main__.py  server.py
src/devops_mcps/: cli.py  client.py  core.py  github.py  github_request.py  jenkins.py  jenkins_prompt.py  jenkins_sample.py
tests/: conftest.py  test_azure_app_service.py  test_cache.py  test_client.py  test_core.py  test_github.py  test_jenkins.py  test_jenkins_additional_edge_cases.py  test_jenkins_build_api.py  test_jenkins_builds.py  test_jenkins_client.py  test_jenkins_error_scenarios.py  test_jenkins_jobs.py  test_jenkins_queue.py  test_jenkins_sample.py  test_jenkins_utils.py  test_jenkins_views.py  test_logger.py
tests/jenkins/: test_client.py  test_utils.py
tests/unit/: test_github_issues.py
