[project]
name = "devops-mcp"
version = "0.1.0"
description = "A simple DevOps mcp project"
requires-python = ">=3.12"
keywords = [
    "devops",
    "mcp",
    "python",
    "cli",
]
authors = [
    { name="Jien Huang", email="huangjien@gmail.com" }
  ]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: DevOps",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.7",
    "jinja2>=3.1.4",
    "packaging>=24.2",
    "toml>=0.10.2",
]

[project.scripts]
create-mcp-server = "devops-mcp:main"

[project.urls]
Homepage = "https://www.huangjien.com"
Repository = "https://github.com/huangjien/devops-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.4"]